c_lib/source/include/libphonenumber_sys_c_phonemetadata.h

LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_preferred_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* preferred_international_prefix);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_premium_rate(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* premium_rate);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_shared_cost(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* shared_cost);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_short_code(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* short_code);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_standard_rate(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* standard_rate);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_toll_free(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* toll_free);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_uan(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* uan);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_voicemail(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* voicemail);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_voip(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* voip);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_country_code(i18n::phonenumbers::PhoneMetadata* this_ptr, int value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_id_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_id_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_id_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_international_prefix_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_international_prefix_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_international_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_digits_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_digits_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_digits_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_zero_possible(i18n::phonenumbers::PhoneMetadata* this_ptr, bool value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_main_country_for_code(i18n::phonenumbers::PhoneMetadata* this_ptr, bool value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_mobile_number_portable_region(i18n::phonenumbers::PhoneMetadata* this_ptr, bool value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_for_parsing_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_for_parsing_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_for_parsing_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_transform_rule_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_transform_rule_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_transform_rule_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_extn_prefix_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_extn_prefix_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_extn_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_international_prefix_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_international_prefix_char_unsigned_long(i18n::phonenumbers::PhoneMetadata* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_international_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::PhoneMetadata* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_same_mobile_and_fixed_line_pattern(i18n::phonenumbers::PhoneMetadata* this_ptr, bool value);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_shared_cost(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_short_code(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_standard_rate(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_toll_free(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_uan(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_unknown_fields(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_voicemail(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_voip(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_ByteSize(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_CheckTypeAndMergeFrom(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const google::protobuf::MessageLite* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_Clear(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_CopyFrom(i18n::phonenumbers::PhoneNumberDesc* this_ptr, const i18n::phonenumbers::PhoneNumberDesc* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_DiscardUnknownFields(i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_GetCachedSize(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_GetTypeName_as_ptr(const i18n::phonenumbers::PhoneNumberDesc* this_ptr);