src/ffi.rs

  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_preferred_international_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, preferred_international_prefix: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_premium_rate(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, premium_rate: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_shared_cost(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, shared_cost: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_short_code(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, short_code: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_standard_rate(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, standard_rate: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_toll_free(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, toll_free: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_uan(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, uan: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_voicemail(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, voicemail: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_voip(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, voip: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_country_code(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: libc::c_int);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_id_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_id_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_id_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_international_prefix_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_international_prefix_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_international_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_digits_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_digits_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_digits_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_leading_zero_possible(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: bool);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_main_country_for_code(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: bool);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_mobile_number_portable_region(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: bool);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_for_parsing_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_for_parsing_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_for_parsing_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_transform_rule_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_transform_rule_char_unsigned_long
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const libc::c_char,
     size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_national_prefix_transform_rule_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_extn_prefix_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_extn_prefix_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_extn_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_international_prefix_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_international_prefix_char_unsigned_long
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const libc::c_char,
     size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_preferred_international_prefix_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_same_mobile_and_fixed_line_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, value: bool);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_shared_cost
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_short_code
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_standard_rate
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_toll_free
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_uan
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_unknown_fields
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_voicemail
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_voip
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_ByteSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_CheckTypeAndMergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, from: *const ::message_lite::google::protobuf::MessageLite);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_Clear(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_CopyFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc, from: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_DiscardUnknownFields(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_GetCachedSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneNumberDesc_GetTypeName_as_ptr
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
